fix buttons on iOS and safari

--- a/css/main.css
+++ b/css/main.css
@@ -127,26 +127,30 @@ html, body {
 
 #battle-boxMessage {
 	position: absolute;
-	margin: 1.8%;
-	width: 96%;
-	height: 85%;
+	width: 100%;
+	height: 100%;
 	padding: 10px;
 	background-color: white;
-	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+	border: 8px solid black;
 	display: none;
+	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
 #fightButton, #runButton {
 	border-radius: 0;
+	position: absolute;
 	width: 46%;
 	padding: 10px;
-	margin: 1.8%;
-	float: left;
-	height: 85%;
+	margin: 8px;
+	height: 80%;
 	font-size: 20px;
 	background-color: white;
 	-webkit-appearance: none;
 	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+
+#runButton {
+	right: 0;
 }
 
 #battleUI {
